--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="logo">
-                    <img src="./assets/image/logo.svg" alt="this is alt"/>
+                    <img src="./assets/image/public/Logo.svg" alt="this is alt"/>
                     <a href="#">mangcoding Store</a>
                 </div>
                 <nav class="navbar">
@@ -53,5 +53,94 @@
             </div>
         </div>
     </header>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-left-side">
+                    <div class="logo">
+                    <img src="./assets/image/public/Logo.svg" alt="this is alt"/>
+                    <a href="#">mangcoding Store</a>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mollis, justo nec porttitor auctor, erat sapien faucibus lectus, vel tempor dolor augue et lectus. </p>
+                    <div class="icons">
+                        <a href="#">
+                        <img src="./assets/image/icons/facebook.svg" />
+                    </a>
+                    <a href="#">
+                        <img src="./assets/image/icons/Twitter.svg" />
+                    </a>
+                    <a href="#">
+                        <img src="./assets/image/icons/linkedin.svg" />
+                    </a>
+                    <a href="#">
+                        <img src="./assets/image/icons/instagram.svg" />
+                    </a>
+                    </div>
+                </div>
+                <div class="footer-right-side ">
+                    
+                    <div class="footer-item">
+                        <h2>Home</h2>
+                        <ul>
+                            <li>
+                                <a href="#">Product</a>
+                            </li>
+                            <li>
+                                <a href="#">Course</a>
+                            </li>
+                            <li>
+                                <a href="#">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#">Log in</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-item">
+                        <h2>Course</h2>
+                        <ul>
+                            <li>
+                                <a href="#">HTML & CSS</a>
+                            </li>
+                            <li>
+                                <a href="#">Javascript</a>
+                            </li>
+                            <li>
+                                <a href="#">Photographer</a>
+                            </li>
+                            <li>
+                                <a href="#">Design Graphics</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-item">
+                        <h2>Article</h2>
+                        <ul>
+                            <li>
+                                <a href="#">New</a>
+                            </li>
+                            <li>
+                                <a href="#">All</a>
+                            </li>
+                            <li>
+                                <a href="#">Trend</a> 
+                            </li>
+                            <li>
+                                <a href="#">Popular</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-item">
+                        <h2>Contact Us</h2>
+                        <ul>
+                            <li>
+                                <a href="#">CCdoc123@gmail.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
