first-main-section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,63 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="testimonials">
+            <h2>Testimonials</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="testimonial">
+                        <div class="client">
+                            <img src="./assets/image/clients/client1.png" />
+                            <div class="client-data">
+                                <h3>
+                                    Friskidia
+                                </h3>
+                                <span>
+                                    Client
+                                </span>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                        </div>
+                        
+                        <p class="comment">
+                            " Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. "
+                        </p>
+                    </div>
+                    <div class="testimonial">
+                        <div class="client">
+                            <img src="./assets/image/clients/client2.png" />
+                            <div class="client-data">
+                                <h3>
+                                    Finkidia
+                                </h3>
+                                <span>
+                                    Client
+                                </span>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                            <img src="./assets/image/public/Star.svg"/>
+                        </div>
+                        
+                        <p class="comment">
+                            " Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum dapibus luctus. "
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="footer">
         <div class="container">
             <div class="row">
